--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <a href="kuromi-wallpaper.html" class="download-button">Download</a>
         </div>
         <div class="app-item">
-            <img src="Wednesday_icon.png" alt="Wednesday Addams Wallpaper">
+            <img src="wednesday_icon.png" alt="Wednesday Addams Wallpaper">
             <h2>Wednesday Addams Wallpaper</h2>
             <a href="wednesday-wallpaper.html" class="download-button">Download</a>
         </div>
