--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jadoo Std - Wallpapers</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="google-site-verification" content="i7OuKPpy7wkiXnXJcEA_TOZveKBKo32iyQG_0rSLE2k" />
 </head>
 <body>
     <header class="hero">
